[package]
name = "async_demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
futures = { version = "0.3.*" }
mini-redis = "0.4"
bytes = "1"
redis = { version = "0.21.3", features = ["tokio-comp", "tokio-native-tls-comp"] }
chrono = "0.4"
crossbeam = "0.8"
